@@ -1,3 +1,10 @@
+Sat Oct  8 19:09:57 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* area.c (c_align): Add support for ABS area.  Negative offset values
+	are allowed.  Simplified implementation.
+	* regression/tests_pass/align.s: Add.
+	* decode.c (oDecodeTable): Add FIXME for RLIST.
+
 Sat Oct  8 16:43:23 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* symbol.h (SYMBOL_NOTRESOLVED): Remove.
